--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "angularfire": "^2.3.0",
     "angularfire2": "^5.0.0-rc.3",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "firebase": "^4.6.0",
     "rxjs": "^5.4.2",
